# personal-ai-agent

./: .env.example  .gitignore  .replit  CHANGES_APPLIED.md  COMMIT_SUMMARY.md  GIT_COMMIT_GUIDE.md  JARVIS-Setup.bat  Launch-JARVIS.bat  SETUP_STATUS.md  SYSTEM_IGNITION.txt  clean_start.bat  commit_changes.bat  commit_jarvis_setup.ps1  config.py  fix_and_start.bat  gunicorn.conf.py  install.py  install.sh  main.py  perform_commit.bat  quick_commit.bat  quick_start.bat  replit.md  requirements.txt  run_jarvis.bat  setup_and_run.py  setup_jarvis.bat  start_jarvis.bat  test_jarvis.bat  test_server.py  wsgi.py
akshay-ai-core/: .env.example  .gitignore  ALL_ISSUES_RESOLVED.md  Dockerfile  IMPORT_ISSUES_RESOLVED.md  Makefile  README.md  WARNINGS_SUPPRESSED.md  ai.bat  ai.ps1  docker-compose.yml  main.py  pyproject.toml  requirements-minimal.txt  requirements.txt  run_dev.py  test_results.json  uninstall.ps1
akshay-ai-core/api/: __init__.py  main.py  middleware.py  websocket.py
akshay-ai-core/api/routes/: __init__.py  auth.py  automation.py  brain.py  plugins.py  system.py
akshay-ai-core/automation/: __init__.py  scheduler.py
akshay-ai-core/config/: automation_rules.yaml  prompts.yaml
akshay-ai-core/core/: __init__.py  config.py  init_db.py  models.py  shell.py
akshay-ai-core/core/brain/: __init__.py  command_router.py  llm_connector.py  memory.py  truth_check.py
akshay-ai-core/core/gateway/: __init__.py  base.py  errors.py  router.py  session.py  trust_map.py
akshay-ai-core/core/policy/: __init__.py  engine.py  errors.py  loader.py  schema.py  signer.py  store.py  verifier.py
akshay-ai-core/core/security/: __init__.py  audit_log.py  auth_manager.py  automation_safety.py  bootstrap.py  dispatcher.py  encryption.py  engine.py  firewall.py  hardening.py  integration.py  keystore.py  memory_governance.py  permissions.py  wizard.py
akshay-ai-core/core/utils/: __init__.py  logger.py  system_check.py
akshay-ai-core/docs/: PHASE3_ARCHITECTURE.md  POLICY_ENGINE_DESIGN.md  PRE_RELEASE_AUDIT.md  PRODUCT_DESIGN.md  RELEASE_REPORT.md  SECURITY.md  THREAT_MODEL.md
akshay-ai-core/install/: install.ps1  requirements_minimal.txt
akshay-ai-core/plugins/: __init__.py  base.py  manager.py
akshay-ai-core/plugins/builtin/: __init__.py
akshay-ai-core/plugins/builtin/cyber_tools/: __init__.py
akshay-ai-core/policies/: default.yaml  demo.yaml
akshay-ai-core/scripts/: run_ui.py  start_server.py
akshay-ai-core/share/: README.txt
akshay-ai-core/tests/: __init__.py  conftest.py  test_api.py  test_bootstrap.ps1  test_brain.py  test_core.py  test_gateway.py  test_installer.ps1  test_keystore.ps1  test_plugins.py  test_release.ps1  test_security.py
akshay-ai-core/tests/test_policy/: __init__.py  test_engine.py  test_loader.py  test_merge_engine.py  test_schema.py  test_signing.py
akshay-ai-core/ui/: __init__.py
akshay-ai-core/ui/voice/: __init__.py
akshay-ai-core/ui/web/: __init__.py  app.py
(+49 files in other folders)
